Hotovy prikaz na prochazeni mezi mistnostma a dolazene chyby