@@ -6,13 +6,14 @@ import prikazy.Jdi;
 public class Hra {
     private Hrac hrac;
     private boolean konec;
-//Nacte game data hrace a spusti hru
+
+    //Nacte game data hrace a spusti hru
     public void spusti() {
         GameData data = GameData.loadGameDataFromResources("res/GameData.json");
         Konzole k = new Konzole();
         Hrac h = new Hrac();
-        h.setAktualniMistnost(data.getLocations().get(0));
-        k.inicializatorPrikazu(data,h);
+        h.setAktualniMistnost(data.getLocations().getFirst());
+        k.inicializatorPrikazu(data, h);
         k.execute();
     }
 
